# ubkg-api

./: .gitignore  Dockerfile  MANIFEST.in  README.md  VERSION  build-local-docker.sh  dd-api-spec.yaml  docker-compose.deployment.hubmap.api.yml  docker-compose.localhost.yml  docker-compose.yml  entrypoint.sh  generate-build-version.sh  pyproject.toml  run-local-docker.sh  start.sh  test_api.sh  ubkg-api-aws-api-gateway.yaml  ubkg-api-spec.yaml  ubkg-api-ubkgbox-spec.yaml
.github/workflows/: python-app.yml
api/: README-build-install.md  app.py  encoder.py  run_server_on_localhost.py  wsgi.py
api/instance/: app.cfg.example
api/managers/: neo4j_manager.py
api/models/: assay_type_property_info.py  codes_codes_obj.py  concept_detail.py  concept_prefterm.py  dataset_property_info.py  path_item_concept_relationship_sab_prefterm.py  qqst.py  sab_code_term.py  semantic_stn.py  sty_tui_stn.py
api/openapi_server/: __main__.py
docker/: README.md  docker-compose.deployment.data-distillery.api.yml  docker-compose.deployment.hubmap.api.yml  docker-compose.deployment.yml  docker-compose.development.yml  docker-compose.localhost.yml  docker-compose.yml  docker-deployment.sh  docker-development.sh
docker/ubkg-api/: .dockerignore  Dockerfile  entrypoint.sh  start.sh
docs/: v2 Release Notes.md  v2.1 Release Notes.md
log/: README.md
nginx/conf.d/: ubkg-api.conf
postman/: HuBMAP Ontology API.postman_collection.json
scripts/: README-Refactor-Summary.md  README-transform-process.md
scripts/Jonathan/: Enhancement to address duplicate cross reference.md  OWLNETS-UMLS-GRAPH.ipynb
src/: DEPRECATED ENDPOINTS.md  README-build-install.md  README.md  __init__.py  app.py  build-server.sh  main.py  neo4j_manager.py  requirements.txt  test.sh  uwsgi.ini
src/instance/: app.cfg.example
src/managers/: neo4j_manager.py
src/models/: assay_type_property_info.py  codes_codes_obj.py  concept_detail.py  concept_prefterm.py  concept_sab_rel.py  concept_sab_rel_depth.py  concept_term.py  dataset_property_info.py  path_item_concept_relationship_sab_prefterm.py  qconcept_tconcept_sab_rel.py  qqst.py  sab_code_term.py  sab_definition.py  sab_relationship_concept_prefterm.py  sab_relationship_concept_term.py  semantic_stn.py  (+2 more)
tests/: python_client_test.py  test_api.sh  test_controllers.py  test_dd_api.sh  test_ubkg_api.sh  test_valueset_controller.py  ubkg-api-system-test.sh  ubkg-api-unit-test.sh
ubkg_api/: app.py  neo4j_manager.py
(+138 files in other folders)
