[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ubkg_api"
version = "0.0.1"
authors = [
  { name="Charles Kollar", email="charles.kollar@pitt.edu" },
]
description = "A REST API infront of the Unified Biomedical Knowlegde Graph"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python_dateutil>=2.6.0",
    "setuptools>=21.0.0",
    "Flask==2.1.3",
    "neo4j==4.2.1"
]

[project.urls]
"Homepage" = "https://github.com/x-atlas-consortia/ubkg-api"
"Bug Tracker" = "https://github.com/x-atlas-consortia/ubkg-api/issues"