[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.cypher"]

[project]
name = "ubkg_api"
version = "2.1.9"
authors = [
  { name="HuBMAP Consortium", email="api-developers@hubmapconsortium.org" },
]
description = "A REST API in front of the Unified Biomedical Knowlegde Graph"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python_dateutil>=2.6.0",
    "setuptools>=21.0.0",
    "Flask==3.0.3",
    "neo4j==5.15.0"
]

[project.urls]
"Homepage" = "https://github.com/x-atlas-consortia/ubkg-api"
"Bug Tracker" = "https://github.com/x-atlas-consortia/ubkg-api/issues"
